// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mutations matches expected output: CreateUser.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
mutation createUser {
  createUser(username: "lol", password:"lol", email: "lol@lol.lol") {
    success
  }
}
~~~~~~~~~~ OUTPUT ~~~~~~~~~~
{
  "data": {
    "createUser": {
      "success": true
    }
  }
}
`;

exports[`mutations matches expected output: Login.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
mutation login {
  tvHelperLogin(username:"username", password:"password") {
    token
    success
  }
}
~~~~~~~~~~ OUTPUT ~~~~~~~~~~
{
  "data": {
    "tvHelperLogin": {
      "token": "token",
      "success": true
    }
  }
}
`;
